ghost element overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -36,8 +36,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
 }
 
-html,body{
+/* html,body{
   overflow-x:hidden ;
-}
+} */
