--- a/src/pages/Courses/Courses.css
+++ b/src/pages/Courses/Courses.css
@@ -21,20 +21,16 @@
 }
 
 
-.courses_card{
-    /* border: 3px solid #F56D3B; */
+.courses_card {
     max-width: 874px;
-    /* height: 477px; */
     border-radius: 15px;
     margin-top: 95px;
     font-family: "biennalemedium";
     font-weight: 500;
-    opacity:0;
-}
-
-
-.courses_card_heading{
-    /* border: 3px solid blue; */
+    opacity: 0;
+  }
+  
+  .courses_card_heading {
     height: 86px;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
@@ -44,8 +40,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
-}
+    overflow: hidden; /* Added to prevent image overflow */
+  }
+  
+  .card_heading_text {
+    flex: 1.6;
+    color: #FFFFFF;
+  }
+  
+  .courses_card_heading img {
+    width: 100%;
+    height: auto;
+    flex: 1;
+    object-fit: cover; /* Added to ensure the image fits within the container */
+  }
+  
 
 .course_head1{
     background-image: -webkit-linear-gradient(
@@ -134,17 +143,7 @@
     color: #6c6c6a;
 }
 
-.card_heading_text{
-    flex: 1.6;
-    color: #FFFFFF;
-}
 
-.courses_card_heading img{
-    width: 100%;
-    height: 100%;
-    flex: 1;
-    
-}
 
 @media screen and (max-width: 1440px) {
     .courses{
